# multi-scala-example

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  AppTest.scala  BUILD.bazel  BUILD.bzl  README.md  WORKSPACE  defs.bzl  hello.scala  hello_211.scala  hello_212.scala  hello_default.scala
maven_install/: io_bazel_rules_scala_repo_scalac.json
