load(":defs.bzl", "scala_binary", "scala_library", "scala_test")

# bazel build hello-2.11 hello-2.12 hello && ./bazel-bin/hello-2.11 && ./bazel-bin/hello-2.12 && ./bazel-bin/hello#

scala_library(
    name = "library-2.11",
    srcs = [
        "hello.scala",
        "hello_211.scala",
    ],
    toolchain = "@io_bazel_rules_scala//scala:scala-2.11-scala-toolchain",
)

java_binary(
    name = "hello-2.11",
    main_class = "App",
    runtime_deps = [":library-2.11"],
)

scala_library(
    name = "library-2.12",
    srcs = [
        "hello.scala",
        "hello_212.scala",
    ],
    toolchain = "@io_bazel_rules_scala//scala:scala-2.12-scala-toolchain",
)

java_binary(
    name = "hello-2.12",
    main_class = "App",
    runtime_deps = [":library-2.12"],
)

scala_library(
    name = "library",
    srcs = [
        "hello.scala",
        "hello_default.scala",
    ],
)

java_binary(
    name = "hello",
    main_class = "App",
    runtime_deps = [":library"],
)
